--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "webpack-cli": "^5.1.1"
   },
   "dependencies": {
+    "@noble/post-quantum": "^0.2.0",
     "@stellar/js-xdr": "^3.1.2",
     "base32.js": "^0.1.0",
     "bignumber.js": "^9.1.2",
