bug in keypair- add a new function to sining.js
i have a bug in kepair. js about secretKey, i forgot change concat which use to create secretkey. i added a new function, generateSk . this is generate secretKey from secretSeed.

--- a/types/tsconfig.json
+++ b/types/tsconfig.json
@@ -12,5 +12,5 @@
     "forceConsistentCasingInFileNames": true,
     "paths": { "stellar-base": ["../"] }
   },
-  "files": ["index.d.ts", "test.ts"]
+  "files": ["index.d.ts"]
 }
